scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,8 @@ button {
   align-items: center;
   margin: 0;
   padding: 0;
+  background-color: #27282b;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -110,9 +112,11 @@ button {
   border-radius: 1.5rem;
   padding: 4rem 0;
   box-shadow: -2px 6px 20px 3px rgba(0, 0, 0, 0.4);
+  margin: 2rem 0;
 }
 @media screen and (max-width: 1000px) {
   .main {
+    margin: 0;
     min-height: 100vh;
     height: auto;
     width: 100vw;
