--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -14,8 +14,10 @@
   border-radius: $corner-radius-main;
   padding: 4rem 0;
   box-shadow: -2px 6px 20px 3px rgba(#000, 0.4);
+  margin: 2rem 0;
 
   @media screen and (max-width: 1000px) {
+    margin: 0;
     min-height: 100vh;
     height: auto;
     width: 100vw;
